--- a/AppEducation/AppEducation/Views/Shared/_LayoutPresent.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutPresent.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/pages/Presents/css/css.css">
     <link rel="stylesheet" href="~/pages/Presents/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     @RenderSection("Head", required: false)
 </head>
     @RenderBody()
